@@ -11,7 +11,7 @@
 <toolchain.*>:           use_camlp4,use_camlp4_full
 <toolchain.mli>:         pkg_sexplib
 <toolchain.odoc>:        pkg_sexplib
-<extlib.mli>:            pkg_sexplib,pkg_camomile
+<extlib.mli>:            pkg_sexplib,pkg_camomile,camlp4o,use_optcomp
 <extlib.cma>:            link_all
 <extlib_threads.*>:      pkg_sexplib,pkg_threads
 <batteries_core_pack.*>: pkg_sexplib,pkg_camomile
