@@ -1,5 +1,11 @@
 2009-01-27  David Teller  <David.Teller@univ-orleans.fr>
 
+	* src/core/_tags: extlib.mli now uses [use_optcomp]
+
+	* src/core/extlib/extGc.mli: [control.allocation_policy] added, for OCaml 3.11
+
+	* doc/batteries/html/extensions.html: flattened
+
 	* src/main/threads/batteries.ml: [ExtArg] replaces [Batlib_Baselib_Arg]
 
 	* src/core/extlib/extArg.ml*: created
